syntax = "proto3";
package auth;

option go_package = "pb/auth";

service AuthService {
    rpc RegisterAuth (RegisterRequest) returns (RegisterResponse);
    rpc LoginAuth (LoginRequest) returns (LoginResponse);
}

message LoginRequest {
    string email = 1;
    string password = 2;
}
message LoginResponse {
    string id = 1;
    string email = 2;
    string password = 3;
}

message RegisterRequest {
    string full_name = 1;
    string email = 2;
    string password = 3;
    float balance = 4;
    string address = 5;
    string role = 6;
}
message RegisterResponse {
    string id = 1;
    string name = 2;
    string email = 3;
    float balance = 4;
    string address = 5;
    string role = 6;
}